force-app/main/default/objects/Prank__c/Prank__c.object-meta.xml
<CustomObject>
    <label>Prank</label>
    <nameField>
        <displayFormat>P!!-{0000}</displayFormat>
        <label>Prank</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pranks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>