force-app/main/default/objects/Prank__c/fields/Prank_Description__c.field-meta.xml
<CustomField>
    <fullName>Prank_Description__c</fullName>
    <label>Prank Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>