force-app/main/default/objects/Prank__c/fields/Prank_Score__c.field-meta.xml
<CustomField>
    <fullName>Prank_Score__c</fullName>
    <inlineHelpText>Prank score on scale from 1-5</inlineHelpText>
    <label>Prank Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>