force-app/main/default/objects/Prank__c/fields/Prankee__c.field-meta.xml
<CustomField>
    <fullName>Prankee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prankee</label>
    <referenceTo>Prankster__c</referenceTo>
    <relationshipLabel>Pranks Against</relationshipLabel>
    <relationshipName>PranksAgainst</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>