force-app/main/default/objects/Prank__c/fields/Pranker__c.field-meta.xml
<CustomField>
    <fullName>Pranker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pranker</label>
    <referenceTo>Prankster__c</referenceTo>
    <relationshipLabel>Pranks Achieved</relationshipLabel>
    <relationshipName>PranksAchieved</relationshipName>
    <type>Lookup</type>
</CustomField>