force-app/main/default/objects/Prank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Pranker__c</columns>
    <columns>Prankee__c</columns>
    <columns>Prank_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>