force-app/main/default/objects/Prank__c/listViews/crt_TEST.listView-meta.xml
<ListView>
    <fullName>crt_TEST</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Pranker__c</columns>
    <columns>Prankee__c</columns>
    <columns>Prank_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Title__c</field>
        <operation>startsWith</operation>
        <value>CRT</value>
    </filters>
    <label>crt_TEST</label>
</ListView>